@@ -1,3 +1,10 @@
+2009-03-05  Sanel <karijes@users.sourceforge.net>
+
+	* src/Run.cpp: reimlemented code for asynchronous process spawning, mainly
+	to prevent creating zombie processes; the code is inspired by Glib
+	implmenetation
+	* edelib/Run.h: added RUN_PIPE_FAILED flag
+
 2009-03-01  Sanel <karijes@users.sourceforge.net>
 
 	* m4/pkg.m4: imported modification from ede2 module, where spaces in
